# frshelpers

./: .bumpversion.toml  README.md  example.py  pyproject.toml  setup.py
frshelpers/: evaluation.py  ops.py  plot.py
scripts/: increase_version.sh
src/frshelpers/: evaluation.py  jaxops.py  ops.py  version.py
